2020-11-05  Aakash Jain  <aakash_jain@apple.com>

        [ews] Patch which break layout-test shouldn't cause infinite RETRY loop
        https://bugs.webkit.org/show_bug.cgi?id=218618

        Reviewed by Jonathan Bedard.

        * CISupport/ews-build/steps.py:
        (RunWebKitTests.evaluateResult): Do not retry when layout-tests fail with exit code 254. Instead fail the build-step, which
        will trigger re-run and run-layout-tests-without-patch steps.
        (RunWebKitTestsWithoutPatch.evaluateCommand): Set clean_tree_run_status build property.
        (AnalyzeLayoutTestsResults.report_failure):
        (AnalyzeLayoutTestsResults.start): If clean tree run passes, mark the build as failure.
        * CISupport/ews-build/steps_unittest.py: Added/updated unit-tests.

2020-11-05  Patrick Angle  <pangle@apple.com>

        Change my (Patrick Angle's) status to committer.

        Unreviewed, updating contributors.json for myself.

        * Scripts/webkitpy/common/config/contributors.json:

2020-11-05  Lauro Moura  <lmoura@igalia.com>

        [GTK] Test /webkit/WebKitWebsiteData/configuration is flaky
        https://bugs.webkit.org/show_bug.cgi?id=205441

        Reviewed by Carlos Garcia Campos.

        Checking the last 200 runs of gtk-release in the bots, the original
        error from the report does not appear, but other flakies happened
        related to checking if some directories were created (namely
        indexeddb, service-workers and dom-cache). As they are created
        asynchronously or lazily (i.e. requiring some operation to happen).
        This could be seen in the WPE bots, not covered by the original
        expectation, and also reproduced locally by running the test case
        alone.

        This commit adds some steps/wait time before each of these to make
        sure the directories are created properly.

        * TestWebKitAPI/Tests/WebKitGLib/TestWebsiteData.cpp: